--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
     "react": "18.3.1",
     "react-day-picker": "9.1.4",
     "react-dom": "18.3.1",
-    "react-hook-form": "7.53.1",
+    "react-hook-form": "^7.53.1",
     "react-icons": "^5.3.0",
     "react-leaflet": "4.2.1",
     "tailwind-merge": "2.5.4",
