--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "class-variance-authority": "0.7.0",
     "clsx": "2.1.1",
     "date-fns": "4.1.0",
-    "leaflet": "1.9.4",
+    "leaflet": "^1.9.4",
     "lucide-react": "0.453.0",
     "next": "14.2.16",
     "react": "18.3.1",
@@ -35,7 +35,7 @@
     "react-dom": "18.3.1",
     "react-hook-form": "^7.53.1",
     "react-icons": "5.3.0",
-    "react-leaflet": "4.2.1",
+    "react-leaflet": "^4.2.1",
     "tailwind-merge": "2.5.4",
     "tailwindcss-animate": "1.0.7",
     "zod": "3.23.8",
